refactor(): 우승자 확인 코드 수정 우승자 확인 코드 간결화하여 수정 - toList() 함수를 활용하여 코드를 간결화했습니다